@@ -13,6 +13,7 @@ import com.vaadin.flow.server.StreamResource;
 import com.vaadin.flow.server.VaadinService;
 import com.vaadin.flow.server.startup.FakeBrowser;
 import com.vaadin.starter.applayout.ui.utils.UIUtils;
+import org.apache.commons.io.IOUtils;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
@@ -121,7 +122,7 @@ public abstract class NaviItem extends Div {
 
     protected String readFile(String path, Charset encoding) throws IOException {
         InputStream resourceAsStream = VaadinService.getCurrent().getResourceAsStream("frontend://" + path, FakeBrowser.getEs6(), null);
-        byte[] bytes = resourceAsStream.readAllBytes();
+        byte[] bytes = IOUtils.toByteArray(resourceAsStream);
         return new String(bytes, encoding);
     }
 
